[gd_scene load_steps=17 format=4 uid="uid://cmokw51flriki"]

[ext_resource type="Script" uid="uid://brg21o814j1dc" path="res://title_scene/title_scene.gd" id="1_i4gmv"]
[ext_resource type="PackedScene" uid="uid://b8m4r8p0jakw" path="res://TileMaps/dungeon_01.tscn" id="1_uvhto"]
[ext_resource type="AudioStream" uid="uid://cya4ny25acx4h" path="res://title_scene/audio/main_menu.wav" id="2_lj5tl"]
[ext_resource type="Texture2D" uid="uid://cfnbx8xjhfa6c" path="res://title_scene/sprites/title.png" id="3_5xqkb"]
[ext_resource type="AudioStream" uid="uid://c6xltqwmr4vb2" path="res://title_scene/audio/menu_focus.wav" id="3_lj5tl"]
[ext_resource type="AudioStream" uid="uid://ct0amm5wqsxlk" path="res://title_scene/audio/menu_select.wav" id="4_fkwea"]
[ext_resource type="PackedScene" uid="uid://bntird3iw6uly" path="res://Levels/player_spawn.tscn" id="5_0q24l"]
[ext_resource type="FontFile" uid="uid://cr74hc551wapv" path="res://GUI/fonts/Abaddon Bold.ttf" id="7_fkwea"]
[ext_resource type="PackedScene" uid="uid://v3kkpaejyd1k" path="res://title_scene/splash_scene.tscn" id="8_lj5tl"]
[ext_resource type="PackedScene" uid="uid://ca52edjh40s11" path="res://Interactables/Dungeon/pushable_statue.tscn" id="9_lj5tl"]

[sub_resource type="Animation" id="Animation_lj5tl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wgj1g"]
resource_name = "default"
length = 5.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.049999997, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fkwea"]
_data = {
&"RESET": SubResource("Animation_lj5tl"),
&"default": SubResource("Animation_wgj1g")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fkwea"]
bg_color = Color(0, 0, 0, 0.735)

[sub_resource type="Theme" id="Theme_fp78m"]
Button/styles/normal = SubResource("StyleBoxFlat_fkwea")

[sub_resource type="Theme" id="Theme_svbj5"]

[node name="TitleScene" type="Node2D"]
process_mode = 3
script = ExtResource("1_i4gmv")
music = ExtResource("2_lj5tl")
button_focus_audio = ExtResource("3_lj5tl")
button_pressed_audio = ExtResource("4_fkwea")

[node name="Dungeon01" parent="." instance=ExtResource("1_uvhto")]
z_index = -1
scale = Vector2(0.75, 0.75)
tile_map_data = PackedByteArray("AAAAAAAAAQAUAA4AAAAAAAEAAQAUAA4AAAAAAAIAAQAUAA4AAAAAAAMAAQAUAA4AAAAAAAQAAQAUAA4AAAAAAAUAAQAUAA4AAAAAAAYAAQAUAA4AAAAAABIAAQASAA0AAAABAAAAAQAUAA4AAAABAAEAAQAUAA4AAAABAAIAAQAUAA4AAAABAAMAAQAUAA4AAAABAAQAAQAUAA4AAAABAAUAAQAUAA4AAAABAAYAAQAUAA4AAAABAAcAAQAYAAAAAAABAAgAAQAOAAsAAAABAAkAAQAOAAwAAAABAAoAAQAOAA0AAAABAAsAAQAOAA4AAAABAAwAAQAOAA8AAAABAA0AAQAAAAkAAAABAA4AAQAEAAUAAAABAA8AAQAHAAIAAAABABAAAQACAAIAAAABABEAAQAGAA4AAAABABIAAQATAA0AAAACAAAAAQAUAA4AAAACAAEAAQASAAAAAAACAAIAAQASAAEAAAACAAMAAQASAAIAAAACAAQAAQASAAMAAAACAAUAAQASAAQAAAACAAYAAQASAAUAAAACAAcAAQAGAAgAAAACAAgAAQAYAAEAAAACAAkAAQANAAYAAAACAAoAAQANAAcAAAACAAsAAQANAAgAAAACAAwAAQANAAkAAAACAA0AAQABAAkAAAACAA4AAQABAAIAAAACAA8AAQABAAgAAAACABAAAQAEAAAAAAACABEAAQAYAAwAAAACABIAAQAUAA0AAAADAAAAAQAUAA4AAAADAAEAAQATAAAAAAADAAIAAQATAAEAAAADAAMAAQATAAIAAAADAAQAAQATAAMAAAADAAUAAQATAAQAAAADAAYAAQATAAUAAAADAAcAAQATAAYAAAADAAgAAQANAAUAAAADAAkAAQANAAYAAAADAAoAAQANAAcAAAADAAsAAQANAAgAAAADAAwAAQANAAkAAAADAA0AAQADAAkAAAADAA4AAQAAAAMAAAADAA8AAQACAAgAAAADABAAAQABAAcAAAADABEAAQAYAAwAAAADABIAAQAVAA0AAAAEAAAAAQAUAA4AAAAEAAEAAQAUAAAAAAAEAAIAAQAUAAEAAAAEAAMAAQAUAAIAAAAEAAQAAQAUAAMAAAAEAAUAAQAUAAQAAAAEAAYAAQAUAAUAAAAEAAcAAQAUAAYAAAAEAAgAAQAOAAUAAAAEAAkAAQAOAAYAAAAEAAoAAQAOAAcAAAAEAAsAAQAOAAgAAAAEAAwAAQAOAAkAAAAEAA0AAQAFAAQAAAAEAA4AAQAEAAIAAAAEAA8AAQAHAAEAAAAEABAAAQADAAMAAAAEABEAAQAUAAwAAAAEABIAAQAWAA0AAAAFAAAAAQAUAA4AAAAFAAEAAQAVAAAAAAAFAAIAAQAVAAEAAAAFAAMAAQAVAAIAAAAFAAQAAQAVAAMAAAAFAAUAAQAVAAQAAAAFAAYAAQAVAAUAAAAFAAcAAQAVAAYAAAAFAAgAAQAPAAUAAAAFAAkAAQAPAAYAAAAFAAoAAQAPAAcAAAAFAAsAAQAPAAgAAAAFAAwAAQAPAAkAAAAFAA0AAQABAAMAAAAFAA4AAQAAAAMAAAAFAA8AAQABAAAAAAAFABAAAQABAAgAAAAFABEAAQAVAAwAAAAFABIAAQAXAA0AAAAGAAAAAQAUAA4AAAAGAAEAAQAWAAAAAAAGAAIAAQAWAAEAAAAGAAMAAQAWAAIAAAAGAAQAAQAWAAMAAAAGAAUAAQAWAAQAAAAGAAYAAQAWAAUAAAAGAAcAAQAWAAYAAAAGAAgAAQAQAAUAAAAGAAkAAQAQAAYAAAAGAAoAAQAQAAcAAAAGAAsAAQAQAAgAAAAGAAwAAQAQAAkAAAAGAA0AAQAFAAMAAAAGAA4AAQAEAAMAAAAGAA8AAQABAAMAAAAGABAAAQAFAAEAAAAGABEAAQAWAAwAAAAGABIAAQAYAA0AAAAHAAAAAQAUAA4AAAAHAAEAAQAXAAAAAAAHAAIAAQAXAAEAAAAHAAMAAQAXAAIAAAAHAAQAAQAXAAMAAAAHAAUAAQAXAAQAAAAHAAYAAQAXAAUAAAAHAAcAAQAXAAYAAAAHAAgAAQARAAUAAAAHAAkAAQARAAYAAAAHAAoAAQARAAcAAAAHAAsAAQARAAgAAAAHAAwAAQARAAkAAAAHAA0AAQACAAkAAAAHAA4AAQADAAMAAAAHAA8AAQAFAAUAAAAHABAAAQADAAUAAAAHABEAAQAXAAwAAAAHABIAAQAZAA0AAAAIAAAAAQAUAA4AAAAIAAEAAQAYAAAAAAAIAAIAAQAYAAEAAAAIAAMAAQAYAAIAAAAIAAQAAQAYAAMAAAAIAAUAAQAYAAQAAAAIAAYAAQAYAAUAAAAIAAcAAQAYAAYAAAAIAAgAAQACAAcAAAAIAAkAAQABAAAAAAAIAAoAAQAAAAkAAAAIAAsAAQAGAAIAAAAIAAwAAQAGAAEAAAAIAA0AAQADAAYAAAAIAA4AAQAYAAcAAAAIAA8AAQAEAAUAAAAIABAAAQACAAQAAAAIABEAAQAYAAwAAAAIABIAAQAaAA0AAAAJAAAAAQAUAA4AAAAJAAEAAQAYAAAAAAAJAAIAAQAYAAEAAAAJAAMAAQAYAAIAAAAJAAQAAQAYAAMAAAAJAAUAAQAYAAQAAAAJAAYAAQAYAAUAAAAJAAcAAQABAAMAAAAJAAgAAQAEAAMAAAAJAAkAAQABAAYAAAAJAAoAAQAEAAUAAAAJAAsAAQABAAIAAAAJAAwAAQACAAcAAAAJAA0AAQADAAIAAAAJAA4AAQAFAAMAAAAJAA8AAQACAAMAAAAJABAAAQAGAAUAAAAJABEAAQAYAAwAAAAJABIAAQAbAA0AAAAKAAAAAQAUAA4AAAAKAAEAAQAZAAAAAAAKAAIAAQAZAAEAAAAKAAMAAQAZAAIAAAAKAAQAAQAZAAMAAAAKAAUAAQAZAAQAAAAKAAYAAQAZAAUAAAAKAAcAAQADAAQAAAAKAAgAAQADAAEAAAAKAAkAAQAHAAUAAAAKAAoAAQABAAIAAAAKAAsAAQACAAEAAAAKAAwAAQAGAAMAAAAKAA0AAQAAAAAAAAAKAA4AAQAEAAAAAAAKAA8AAQAFAAIAAAAKABAAAQAHAAIAAAAKABEAAQAZAAwAAAAKABIAAQAcAA0AAAALAAAAAQAUAA4AAAALAAEAAQAYAAAAAAALAAIAAQAOAAsAABALAAMAAQAOAAwAABALAAQAAQAOAA0AABALAAUAAQAOAA4AABALAAYAAQAOAA8AABALAAcAAQAEAAMAAAALAAgAAQABAAkAAAALAAkAAQAAAAIAAAALAAoAAQAAAAkAAAALAAsAAQADAAcAAAALAAwAAQAEAAMAAAALAA0AAQAEAAUAAAALAA4AAQACAAQAAAALAA8AAQAHAAIAAAALABAAAQACAAAAAAALABEAAQAGAA4AABALABIAAQAdAA0AAAAMAAAAAQAUAA4AAAAMAAEAAQAZAAAAAAAMAAIAAQAOAAsAAAAMAAMAAQAOAAwAAAAMAAQAAQAOAA0AAAAMAAUAAQAOAA4AAAAMAAYAAQAOAA8AAAAMAAcAAQADAAkAAAAMAAgAAQAAAAMAAAAMAAkAAQAHAAUAAAAMAAoAAQABAAYAAAAMAAsAAQACAAYAAAAMAAwAAQABAAUAAAAMAA0AAQAAAAIAAAAMAA4AAQAHAAMAAAAMAA8AAQADAAIAAAAMABAAAQABAAQAAAAMABEAAQAGAA4AAAAMABIAAQAeAA0AAAANAAAAAQAUAA4AAAANAAEAAQAYAAAAAAANAAIAAQAYAAEAAAANAAMAAQAYAAIAAAANAAQAAQAYAAMAAAANAAUAAQAYAAQAAAANAAYAAQAYAAUAAAANAAcAAQADAAYAAAANAAgAAQAEAAUAAAANAAkAAQAAAAMAAAANAAoAAQADAAMAAAANAAsAAQADAAAAAAANAAwAAQACAAQAAAANAA0AAQACAAMAAAANAA4AAQAEAAAAAAANAA8AAQABAAEAAAANABAAAQAHAAMAAAANABEAAQAYAAwAAAAAABMAAQAUAA4AAAABABMAAQAUAA4AAAACABMAAQAUAA4AAAADABMAAQAUAA4AAAAEABMAAQAUAA4AAAAFABMAAQAUAA4AAAAGABMAAQAUAA4AAAAHABMAAQAUAA4AAAAIABMAAQAUAA4AAAAJABMAAQAUAA4AAAAKABMAAQAUAA4AAAALABMAAQAUAA4AAAAMABMAAQAUAA4AAAANABMAAQAUAA4AAAAUAAAAAQAUAA4AAAAUAAEAAQAYAAAAAAAUAAIAAQAZAAEAAAAUAAMAAQAZAAIAAAAUAAQAAQAZAAMAAAAUAAUAAQAZAAQAAAAUAAYAAQAZAAUAAAAUAAcAAQADAAgAAAAUAAgAAQAGAAIAAAAUAAkAAQADAAAAAAAUAAoAAQACAAQAAAAUAAsAAQAGAAIAAAAUAAwAAQAGAAEAAAAUAA0AAQABAAcAAAAUAA4AAQABAAcAAAAUAA8AAQABAAAAAAAUABAAAQAAAAIAAAAUABEAAQAZAAwAAAAUABIAAQAZAA0AAAAUABMAAQAUAA4AAAAVAAAAAQAUAA4AAAAVAAEAAQAYAAAAAAAVAAIAAQAOAAsAABAVAAMAAQAOAAwAABAVAAQAAQAOAA0AABAVAAUAAQAOAA4AABAVAAYAAQAOAA8AABAVAAcAAQAAAAYAAAAVAAgAAQAEAAQAAAAVAAkAAQAFAAQAAAAVAAoAAQABAAgAAAAVAAsAAQAFAAAAAAAVAAwAAQADAAQAAAAVAA0AAQACAAMAAAAVAA4AAQAEAAEAAAAVAA8AAQAHAAUAAAAVABAAAQADAAQAAAAVABEAAQAGAA4AABAVABIAAQAZAA0AAAAVABMAAQAUAA4AAAAWAAAAAQAUAA4AAAAWAAEAAQAZAAAAAAAWAAIAAQAOAAsAAAAWAAMAAQAOAAwAAAAWAAQAAQAOAA0AAAAWAAUAAQAOAA4AAAAWAAYAAQAOAA8AAAAWAAcAAQABAAUAAAAWAAgAAQAGAAIAAAAWAAkAAQADAAkAAAAWAAoAAQABAAkAAAAWAAsAAQAFAAIAAAAWAAwAAQAHAAUAAAAWAA0AAQAGAAQAAAAWAA4AAQACAAIAAAAWAA8AAQAFAAEAAAAWABAAAQADAAgAAAAWABEAAQAGAA4AAAAWABIAAQAZAA0AAAAWABMAAQAUAA4AAAAXAAAAAQAUAA4AAAAXAAEAAQAYAAAAAAAXAAIAAQAYAAEAAAAXAAMAAQAYAAIAAAAXAAQAAQAYAAMAAAAXAAUAAQAYAAQAAAAXAAYAAQAYAAUAAAAXAAcAAQACAAIAAAAXAAgAAQAAAAQAAAAXAAkAAQAAAAMAAAAXAAoAAQABAAgAAAAXAAsAAQAEAAIAAAAXAAwAAQADAAQAAAAXAA0AAQAGAAAAAAAXAA4AAQAFAAQAAAAXAA8AAQAHAAAAAAAXABAAAQACAAUAAAAXABEAAQAYAAwAAAAXABIAAQAZAA0AAAAXABMAAQAUAA4AAAAYAAAAAQAUAA4AAAAYAAEAAQAZAAAAAAAYAAIAAQAZAAEAAAAYAAMAAQAZAAIAAAAYAAQAAQAZAAMAAAAYAAUAAQAZAAQAAAAYAAYAAQAZAAUAAAAYAAcAAQAEAAIAAAAYAAgAAQAGAAAAAAAYAAkAAQAAAAUAAAAYAAoAAQAEAAEAAAAYAAsAAQAFAAMAAAAYAAwAAQAGAAAAAAAYAA0AAQACAAYAAAAYAA4AAQABAAkAAAAYAA8AAQADAAkAAAAYABAAAQACAAMAAAAYABEAAQAZAAwAAAAYABIAAQAZAA0AAAAYABMAAQAUAA4AAAAZAAAAAQAUAA4AAAAZAAEAAQAZAAAAAAAZAAIAAQAZAAEAAAAZAAMAAQAZAAIAAAAZAAQAAQAZAAMAAAAZAAUAAQAZAAQAAAAZAAYAAQAZAAUAAAAZAAcAAQAZAAYAAAAZAAgAAQABAAcAAAAZAAkAAQADAAUAAAAZAAoAAQADAAcAAAAZAAsAAQADAAQAAAAZAAwAAQACAAcAAAAZAA0AAQACAAUAAAAZAA4AAQAZAAcAAAAZAA8AAQAGAAUAAAAZABAAAQAGAAQAAAAZABEAAQAZAAwAAAAZABIAAQAZAA0AAAAZABMAAQAUAA4AAAAaAAAAAQAUAA4AAAAaAAEAAQAaAAAAAAAaAAIAAQAaAAEAAAAaAAMAAQAaAAIAAAAaAAQAAQAaAAMAAAAaAAUAAQAaAAQAAAAaAAYAAQAaAAUAAAAaAAcAAQAaAAYAAAAaAAgAAQAIAAUAAAAaAAkAAQAIAAYAAAAaAAoAAQAIAAcAAAAaAAsAAQAIAAgAAAAaAAwAAQAIAAkAAAAaAA0AAQAHAAQAAAAaAA4AAQAHAAQAAAAaAA8AAQADAAMAAAAaABAAAQAAAAYAAAAaABEAAQAaAAwAAAAaABIAAQAZAA0AAAAaABMAAQAUAA4AAAAbAAAAAQAUAA4AAAAbAAEAAQAbAAAAAAAbAAIAAQAbAAEAAAAbAAMAAQAbAAIAAAAbAAQAAQAbAAMAAAAbAAUAAQAbAAQAAAAbAAYAAQAbAAUAAAAbAAcAAQAbAAYAAAAbAAgAAQAJAAUAAAAbAAkAAQAJAAYAAAAbAAoAAQAJAAcAAAAbAAsAAQAJAAgAAAAbAAwAAQAJAAkAAAAbAA0AAQADAAQAAAAbAA4AAQAAAAMAAAAbAA8AAQADAAQAAAAbABAAAQADAAUAAAAbABEAAQAbAAwAAAAbABIAAQAZAA0AAAAbABMAAQAUAA4AAAAcAAAAAQAUAA4AAAAcAAEAAQAcAAAAAAAcAAIAAQAcAAEAAAAcAAMAAQAcAAIAAAAcAAQAAQAcAAMAAAAcAAUAAQAcAAQAAAAcAAYAAQAcAAUAAAAcAAcAAQAcAAYAAAAcAAgAAQAKAAUAAAAcAAkAAQAKAAYAAAAcAAoAAQAKAAcAAAAcAAsAAQAKAAgAAAAcAAwAAQAKAAkAAAAcAA0AAQAAAAgAAAAcAA4AAQAGAAUAAAAcAA8AAQAEAAQAAAAcABAAAQABAAQAAAAcABEAAQAcAAwAAAAcABIAAQAZAA0AAAAcABMAAQAUAA4AAAAdAAAAAQAUAA4AAAAdAAEAAQAdAAAAAAAdAAIAAQAdAAEAAAAdAAMAAQAdAAIAAAAdAAQAAQAdAAMAAAAdAAUAAQAdAAQAAAAdAAYAAQAdAAUAAAAdAAcAAQAdAAYAAAAdAAgAAQALAAUAAAAdAAkAAQALAAYAAAAdAAoAAQALAAcAAAAdAAsAAQALAAgAAAAdAAwAAQALAAkAAAAdAA0AAQAAAAgAAAAdAA4AAQADAAkAAAAdAA8AAQAAAAkAAAAdABAAAQABAAcAAAAdABEAAQAdAAwAAAAdABIAAQAZAA0AAAAdABMAAQAUAA4AAAAeAAAAAQAUAA4AAAAeAAEAAQAeAAAAAAAeAAIAAQAeAAEAAAAeAAMAAQAeAAIAAAAeAAQAAQAeAAMAAAAeAAUAAQAeAAQAAAAeAAYAAQAeAAUAAAAeAAcAAQAeAAYAAAAeAAgAAQAMAAUAAAAeAAkAAQAMAAYAAAAeAAoAAQAMAAcAAAAeAAsAAQAMAAgAAAAeAAwAAQAMAAkAAAAeAA0AAQAAAAMAAAAeAA4AAQAAAAgAAAAeAA8AAQAAAAgAAAAeABAAAQAFAAAAAAAeABEAAQAYAAwAAAAeABIAAQAZAA0AAAAeABMAAQAUAA4AAAAfAAAAAQAUAA4AAAAfAAEAAQAfAAAAAAAfAAIAAQAfAAEAAAAfAAMAAQAfAAIAAAAfAAQAAQAfAAMAAAAfAAUAAQAfAAQAAAAfAAYAAQAfAAUAAAAfAAcAAQAFAAgAAAAfAAgAAQAYAAEAAAAfAAkAAQAYAAIAAAAfAAoAAQAYAAMAAAAfAAsAAQAYAAQAAAAfAAwAAQAYAAUAAAAfAA0AAQADAAgAAAAfAA4AAQACAAgAAAAfAA8AAQACAAIAAAAfABAAAQABAAEAAAAfABEAAQAYAAwAAAAfABIAAQAZAA0AAAAfABMAAQAUAA4AAAAgAAAAAQAUAA4AAAAgAAEAAQAUAA4AAAAgAAIAAQAUAA4AAAAgAAMAAQAUAA4AAAAgAAQAAQAUAA4AAAAgAAUAAQAUAA4AAAAgAAYAAQAUAA4AAAAgAAcAAQAZAAAAAAAgABIAAQAZAA0AAAAgABMAAQAUAA4AAAAgAAgAAQAOAAsAABAgAAkAAQAOAAwAABAgAAoAAQAOAA0AABAgAAsAAQAOAA4AABAgAAwAAQAOAA8AABAgAA0AAQACAAgAAAAgAA4AAQAAAAkAAAAgAA8AAQAHAAAAAAAgABAAAQACAAkAAAAgABEAAQAGAA4AABAhAAAAAQAUAA4AAAAhAAEAAQAUAA4AAAAhAAIAAQAUAA4AAAAhAAMAAQAUAA4AAAAhAAQAAQAUAA4AAAAhAAUAAQAUAA4AAAAhAAYAAQAUAA4AAAAhAAcAAQAZAAAAAAAhABIAAQAZAA0AAAAhABMAAQAUAA4AAAAOAAAAAQAUAA4AAAAPAAAAAQAUAA4AAAAQAAAAAQAUAA4AAAARAAAAAQAUAA4AAAASAAAAAQAUAA4AAAATAAAAAQAUAA4AAAAOAAIAAQAYAAEAAAAPAAIAAQAYAAEAAAAQAAIAAQAYAAEAAAARAAIAAQAYAAEAAAASAAIAAQAYAAEAAAATAAIAAQAYAAEAAAAOAAEAAQAYAAAAAAAPAAEAAQAYAAAAAAAQAAEAAQAYAAAAAAARAAEAAQAYAAAAAAASAAEAAQAYAAAAAAATAAEAAQAYAAAAAAAhAAkAAQAOAAwAAAAhAAoAAQAOAA0AAAAhAAsAAQAOAA4AAAAhAAwAAQAOAA8AAAAhAAgAAQAOAAsAAAAAAAgAAQAOAAsAABAAAAcAAQAYAAAAAAAAAAkAAQAOAAwAABAAAAoAAQAOAA0AABAAAAsAAQAOAA4AABAAAAwAAQAOAA8AABANABIAAQAZAA0AAAAOABIAAQAZAA0AAAAPABIAAQAZAA0AAAAQABIAAQAZAA0AAAARABIAAQAZAA0AAAASABIAAQAZAA0AAAATABIAAQAZAA0AAAATABMAAQAZAA4AAAASABMAAQAZAA4AAAARABMAAQAZAA4AAAAQABMAAQAZAA4AAAAPABMAAQAZAA4AAAAOABMAAQAZAA4AAAAOABEAAQAZAAwAAAAPABEAAQAZAAwAAAAQABEAAQAZAAwAAAARABEAAQAZAAwAAAASABEAAQAZAAwAAAATABEAAQAZAAwAAAAOAAMAAQAYAAIAAAAOAAQAAQAYAAMAAAAOAAUAAQAYAAQAAAAOAAYAAQAYAAUAAAAPAAMAAQAZAAIAAAAPAAQAAQAZAAMAAAAPAAUAAQAZAAQAAAAPAAYAAQAZAAUAAAAQAAMAAQAYAAIAAAAQAAQAAQAYAAMAAAAQAAUAAQAYAAQAAAAQAAYAAQAYAAUAAAARAAMAAQAZAAIAAAARAAQAAQAZAAMAAAARAAUAAQAZAAQAAAARAAYAAQAZAAUAAAASAAMAAQAYAAIAAAASAAQAAQAYAAMAAAASAAUAAQAYAAQAAAASAAYAAQAYAAUAAAATAAMAAQAZAAIAAAATAAQAAQAZAAMAAAATAAUAAQAZAAQAAAATAAYAAQAZAAUAAAAAABEAAQAGAA4AABAhABEAAQAGAA4AAAAhAA0AAQAEAAQAAAAhAA4AAQAFAAEAAAAhAA8AAQABAAUAAAAhABAAAQACAAMAAAAOAAcAAQABAAYAAAAOAAgAAQAEAAEAAAAOAAkAAQACAAkAAAAOAAoAAQAAAAkAAAAOAAsAAQAGAAIAAAAOAAwAAQAFAAMAAAAOAA0AAQAAAAgAAAAOAA4AAQACAAAAAAAOAA8AAQADAAYAAAAOABAAAQAAAAEAAAAPAAcAAQAGAAQAAAAPAAgAAQAFAAMAAAAPAAkAAQAFAAAAAAAPAAoAAQADAAYAAAAPAAsAAQAAAAMAAAAPAAwAAQAFAAEAAAAPAA0AAQAGAAEAAAAPAA4AAQAAAAIAAAAPAA8AAQACAAkAAAAPABAAAQAAAAcAAAAQAAcAAQAAAAcAAAAQAAgAAQAGAAUAAAAQAAkAAQADAAQAAAAQAAoAAQAHAAQAAAAQAAsAAQAAAAEAAAAQAAwAAQAEAAEAAAAQAA0AAQAGAAQAAAAQAA4AAQABAAQAAAAQAA8AAQAHAAMAAAAQABAAAQAHAAUAAAARAAcAAQAEAAUAAAARAAgAAQADAAMAAAARAAkAAQAAAAgAAAARAAoAAQAGAAEAAAARAAsAAQACAAYAAAARAAwAAQAAAAkAAAARAA0AAQAEAAUAAAARAA4AAQABAAQAAAARAA8AAQADAAMAAAARABAAAQABAAEAAAASAAcAAQABAAQAAAASAAgAAQADAAAAAAASAAkAAQAHAAQAAAASAAoAAQADAAkAAAASAAsAAQADAAQAAAASAAwAAQAHAAEAAAASAA0AAQADAAgAAAASAA4AAQAHAAEAAAASAA8AAQACAAcAAAASABAAAQABAAQAAAATAAcAAQAEAAAAAAATAAgAAQAEAAMAAAATAAkAAQAAAAEAAAATAAoAAQAFAAUAAAATAAsAAQAAAAQAAAATAAwAAQABAAMAAAATAA0AAQAAAAYAAAATAA4AAQAGAAUAAAATAA8AAQABAAAAAAATABAAAQABAAMAAAAAAA0AAQADAAAAAAAAAA4AAQACAAcAAAAAAA8AAQAAAAIAAAAAABAAAQAGAAEAAAA=")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control"]
position = Vector2(576, 256)
scale = Vector2(2, 2)
texture = ExtResource("3_5xqkb")
hframes = 4
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_fkwea")
}
autoplay = "default"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 488.0
offset_top = 384.0
offset_right = 561.0
offset_bottom = 440.0
scale = Vector2(2, 2)

[node name="ButtonNew" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
text = "new game"

[node name="ButtonContinue" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
text = "continue"

[node name="ButtonQuit" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
text = "quit"

[node name="OverWriteSave" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 432.0
offset_top = 360.0
offset_right = 688.0
offset_bottom = 528.0
color = Color(0, 0, 0, 0.70000005)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/OverWriteSave"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -60.0
offset_right = 86.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fp78m")
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="CanvasLayer/Control/OverWriteSave/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_fkwea")
text = "This will overwrite
your current save data. 
Continue?"
horizontal_alignment = 1

[node name="btnAccept" type="Button" parent="CanvasLayer/Control/OverWriteSave/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme = SubResource("Theme_svbj5")
text = "Yes"

[node name="btnCancel" type="Button" parent="CanvasLayer/Control/OverWriteSave/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "No"

[node name="SplashScene" parent="CanvasLayer" instance=ExtResource("8_lj5tl")]
anchors_preset = -1
anchor_right = 0.521
anchor_bottom = 0.568
offset_right = -0.1920166
offset_bottom = -0.06402588
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="PlayerSpawn" parent="." instance=ExtResource("5_0q24l")]
position = Vector2(204, 134)

[node name="PushableStatue" parent="." instance=ExtResource("9_lj5tl")]
unique_name_in_owner = true
position = Vector2(46, 163)

[node name="Sprite2D" parent="PushableStatue" index="1"]
position = Vector2(1, -11)
scale = Vector2(0.5, 0.5)

[node name="PushableStatue2" parent="." instance=ExtResource("9_lj5tl")]
unique_name_in_owner = true
position = Vector2(359, 162)

[node name="Sprite2D" parent="PushableStatue2" index="1"]
position = Vector2(1, -10)
scale = Vector2(0.5, 0.5)

[editable path="PushableStatue"]
[editable path="PushableStatue2"]
